Upgrade script to remove index.cshtml and migrate to config file (straight from claude code)

--- a/src/cli/Directory.Packages.props
+++ b/src/cli/Directory.Packages.props
@@ -4,6 +4,7 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="AngleSharp" Version="1.4.0" />
     <PackageVersion Include="Jint" Version="4.4.2" />
     <PackageVersion Include="LibGit2Sharp" Version="0.31.0" />
     <PackageVersion Include="Microsoft.Build.Locator" Version="1.9.1" />
