--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -9,7 +9,29 @@
   "ConnectionStrings": {
       "WorkflowEngine": "Host=localhost;Database=workflow_engine;Username=postgres;Password=postgres123"
   },
-  "EngineSettings": {},
-  "ApiSettings": {},
-  "AppCommandSettings": {}
+  "EngineSettings": {
+    "QueueCapacity": 10000,
+    "DefaultStepCommandTimeout": "00:01:40",
+    "DefaultStepRetryStrategy": {
+      "BackoffType": "exponential",
+      "BaseInterval": "00:00:01",
+      "MaxDelay": "00:05:00",
+      "MaxDuration": "24:00:00"
+    },
+    "DatabaseCommandTimeout": "00:00:30",
+    "DatabaseRetryStrategy": {
+      "BackoffType": "exponential",
+      "BaseInterval": "00:00:00:100",
+      "MaxDelay": "00:02:00"
+    }
+  },
+  "ApiSettings": {
+    "ApiKeys": [
+      "0544ba8b-2d8a-4ec9-b93a-47cdbd220293"
+    ]
+  },
+  "AppCommandSettings": {
+    "ApiKey": "afc64bcf-fedf-442d-8d41-09b8c5f03c59",
+    "CommandEndpoint":  "http://local.altinn.cloud/{Org}/{App}/instances/{InstanceOwnerPartyId}/{InstanceGuid}/process-engine-callbacks"
+  }
 }
