initial code flow implemented

--- a/src/Designer/backend/src/Designer/Designer.csproj
+++ b/src/Designer/backend/src/Designer/Designer.csproj
@@ -59,6 +59,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" />
     <PackageReference Include="HtmlAgilityPack" />
     <PackageReference Include="Microsoft.DiaSymReader.Native" />
+    <PackageReference Include="NJsonSchema" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="NuGet.Versioning" />
     <PackageReference Include="Polly" />
@@ -165,6 +166,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Schemas\appTemplateManifest.schema.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Views\Home\AppToken.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
