--- a/src/Designer/backend/Directory.Packages.props
+++ b/src/Designer/backend/Directory.Packages.props
@@ -11,6 +11,7 @@
     <PackageVersion Include="Altinn.Authorization.ABAC" Version="0.0.8" />
     <PackageVersion Include="Altinn.ApiClients.Maskinporten" Version="9.2.1" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.10.0" />
+    <PackageVersion Include="NJsonSchema" Version="11.5.2" />
   </ItemGroup>
   <ItemGroup Label="Shared nuget packages">
     <PackageVersion Include="JsonSchema.Net" Version="5.5.1" />
@@ -54,7 +55,7 @@
     <PackageVersion Include="Azure.Storage.Blobs" Version="[12.25.1]" />
     <PackageVersion Include="Azure.Security.KeyVault.Secrets" Version="[4.8.0]" />
     <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
-    <PackageVersion Include="Scriban" Version="6.4.0" />
+    <PackageVersion Include="Scriban" Version="6.5.2" />
     <PackageVersion Include="System.Formats.Asn1" Version="9.0.11" />
     <PackageVersion Include="System.Net.Http" Version="[4.3.4]" />
     <PackageVersion Include="System.Text.RegularExpressions" Version="[4.3.1]" />
