build frontend in backend integration tests by default unless env var is present. Adds env var to integration test run in CI

--- a/.github/workflows/app-backend-tests.yml
+++ b/.github/workflows/app-backend-tests.yml
@@ -78,3 +78,5 @@ jobs:
         working-directory: ${{ matrix.os.workingDir }}
         run: |
           dotnet test solutions/All.sln --no-restore --no-build --logger "console;verbosity=detailed" --filter "Category=Integration"
+        env:
+          SKIP_FRONTEND_BUILD: true
