--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -22,7 +22,8 @@
     "DatabaseRetryStrategy": {
       "BackoffType": "exponential",
       "BaseInterval": "00:00:00:100",
-      "MaxDelay": "00:02:00"
+      "MaxDelay": "00:02:00",
+      "MaxDuration": "02:00:00"
     }
   },
   "ApiSettings": {
