--- a/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
@@ -3,6 +3,23 @@ kind: ClusterRole
 metadata:
   name: studio-gateway-role
 rules:
+  # Core Kubernetes resources
+  - apiGroups:
+      - apps
+    resources:
+      - deployments
+    verbs:
+      - get
+      - list
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+  # Flux CD resources
   - apiGroups:
       - helm.toolkit.fluxcd.io
     resources:
