--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/WorkflowEngine.Api.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/WorkflowEngine.Api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
   </ItemGroup>
 
   <ItemGroup>
