--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Data/WorkflowEngine.Data.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Data/WorkflowEngine.Data.csproj
@@ -10,6 +10,7 @@
 <!--    <PackageReference Include="Altinn.Platform.Storage.Interface" />-->
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
   </ItemGroup>
 
