add helmrelease list permissions to gateway

--- a/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
@@ -26,6 +26,7 @@ rules:
       - helmreleases
     verbs:
       - get
+      - list
   - apiGroups:
       - source.toolkit.fluxcd.io
     resources:
