--- a/src/Runtime/localtest/src/appsettings.Docker.json
+++ b/src/Runtime/localtest/src/appsettings.Docker.json
@@ -7,7 +7,6 @@
     "LocalTestingStaticTestDataPath": "/testdata/",
     "LocalGrafanaUrl": "http://monitoring_grafana:3000",
     "LocalPdfServiceUrl": "http://localtest-pdf3:5031",
-    "LocalReceiptUrl": "http://host.docker.internal:5060",
-    "LocalAccessManagementUrl": "http://host.docker.internal:5117"
+    "LocalReceiptUrl": "http://host.docker.internal:5060"
   }
 }
