--- a/src/Designer/frontend/app-development/package.json
+++ b/src/Designer/frontend/app-development/package.json
@@ -9,7 +9,7 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@posthog/react": "^1.3.0",
+    "@posthog/react": "1.6.0",
     "@studio/assistant": "workspace:^",
     "@studio/browser-storage": "workspace:^",
     "@studio/content-library": "workspace:^",
@@ -20,7 +20,7 @@
     "axios": "1.12.2",
     "classnames": "2.5.1",
     "i18next": "23.16.8",
-    "posthog-js": "1.257.2",
+    "posthog-js": "1.331.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "15.6.1",
