backend end to end verified

--- a/src/Designer/backend/src/Designer/Designer.csproj
+++ b/src/Designer/backend/src/Designer/Designer.csproj
@@ -166,7 +166,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Schemas\appTemplateManifest.schema.json">
+    <Content Update="Schemas\customtemplate.schema.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Views\Home\AppToken.cshtml">
