Fixing the auto backport script to use the latest published release, not the last created one (long-lasting drafts such as v4.25.0 would cause issues) (#3963)
Co-authored-by: Ole Martin Handeland <git@olemartin.org>

--- a/.github/workflows/auto-backport.yml
+++ b/.github/workflows/auto-backport.yml
@@ -26,7 +26,7 @@ jobs:
         id: find-release-branch
         run: |
           # Get the latest release from GitHub
-          LATEST_RELEASE_TAG=$(gh release list --limit 1 --exclude-pre-releases --exclude-drafts --json tagName --jq '.[0].tagName')
+          LATEST_RELEASE_TAG=$(gh release list --limit 10 --exclude-pre-releases --exclude-drafts --json tagName,publishedAt --jq 'sort_by(.publishedAt) | reverse | .[0].tagName')
 
           if [ -z "$LATEST_RELEASE_TAG" ]; then
             echo "No releases found"
