--- a/src/App/template/src/App/App.csproj
+++ b/src/App/template/src/App/App.csproj
@@ -5,8 +5,10 @@
     <RootNamespace>Altinn.App</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="../../../backend/src/Altinn.App.Api/Altinn.App.Api.csproj" />
-    <ProjectReference Include="../../../backend/src/Altinn.App.Core/Altinn.App.Core.csproj" />
+    <PackageReference Include="Altinn.App.Api" Version="8.8.3">
+      <CopyToOutputDirectory>lib\$(TargetFramework)\*.xml</CopyToOutputDirectory>
+    </PackageReference>
+    <PackageReference Include="Altinn.App.Core" Version="8.8.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
