--- a/src/Runtime/operator/test/app/App/App.csproj
+++ b/src/Runtime/operator/test/app/App/App.csproj
@@ -8,6 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="8.0.8" />
-    <ProjectReference Include="../../../../../App/backend/src/Altinn.App.Core/Altinn.App.Core.csproj" />
+    <PackageReference Include="Altinn.App.Core" Version="8.9.2" />
   </ItemGroup>
 </Project>
