--- a/charts/altinn-designer/values.yaml
+++ b/charts/altinn-designer/values.yaml
@@ -132,6 +132,16 @@ environmentVariables:
         secretKeyRef:
           name: altinn-studio-env-secret
           key: aiConnectionString
+    - name: POSTHOG_API_KEY
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiKey
+    - name: POSTHOG_API_HOST
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiHost
   prod:
     - name: ASPNETCORE_ENVIRONMENT
       value: Production
@@ -178,6 +188,16 @@ environmentVariables:
         secretKeyRef:
           name: altinn-studio-env-secret
           key: aiConnectionString
+    - name: POSTHOG_API_KEY
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiKey
+    - name: POSTHOG_API_HOST
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiHost
 
 dbMigrationsEnvironmentVariablesSecretName: altinn-designer-db-migrations-secret
 
