--- a/src/Runtime/StudioGateway/infra/kustomize/base/deployment.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/deployment.yaml
@@ -33,6 +33,7 @@ spec:
     metadata:
       labels:
         app: studio-gateway
+        azure.workload.identity/use: 'true'
       annotations:
         # for mTLS mainly
         linkerd.io/inject: enabled
