--- a/src/Runtime/StudioGateway/infra/kustomize/base/serviceaccount.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/serviceaccount.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: studio-gateway
+  annotations:
+    azure.workload.identity/client-id: "${GATEWAY_ENTRA_CLIENT_ID}"
