--- a/.github/workflows/deploy-lhci-server.yaml
+++ b/.github/workflows/deploy-lhci-server.yaml
@@ -1,7 +1,7 @@
 name: Deploy LHCI Server
 on:
   push:
-    branches: [main, feat/lhci-server]
+    branches: [main]
     paths:
       - 'src/lhci-server/**'
       - '.github/workflows/deploy-lhci-server.yaml'
