--- a/infra/studio/syncroot/base/lhci.yaml
+++ b/infra/studio/syncroot/base/lhci.yaml
@@ -5,7 +5,9 @@ metadata:
   namespace: default
 spec:
   interval: 5m
-  url: oci://altinntjenestercontainerregistry.azurecr.io/altinn-studio/configs/lhci-repo:${ENVIRONMENT}
+  url: oci://altinntjenestercontainerregistry.azurecr.io/altinn-studio/configs/lhci-repo
+  ref:
+    tag: ${ENVIRONMENT}
   provider: azure
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
