Changes for https://github.com/Altinn/app-frontend-react/issues/3634 reproduction

--- a/App/config/applicationmetadata.json
+++ b/App/config/applicationmetadata.json
@@ -101,6 +101,18 @@
       "validationErrorOnPendingFileScan": false,
       "enabledFileAnalysers": [],
       "enabledFileValidators": []
+    },
+    {
+      "id": "sharedperson",
+      "allowedContentTypes": [
+        "application/xml"
+      ],
+      "appLogic": {
+        "autoCreate": true,
+        "classRef": "Altinn.App.Models.sharedperson.sharedperson"
+      },
+      "maxCount": 1,
+      "minCount": 1
     }
   ],
   "partyTypesAllowed": {
