feat: update Ansattporten login and scope fetching for Maskinporten automation

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -131,13 +131,9 @@
     },
     "AnsattPortenLoginSettings": {
         "Authority": "https://test.ansattporten.no",
-        "Scopes": ["openid", "profile", "idporten:dcr.datasharing"],
+        "Scopes": ["openid", "profile"],
         "CookieExpiryTimeInMinutes": 1,
         "AuthorizationDetails": [
-            {
-                "Type": "ansattporten:altinn:service",
-                "Resource": "urn:altinn:resource:2480:40"
-            },
             {
                 "Type": "ansattporten:altinn:service",
                 "Resource": "urn:altinn:resource:5613:1"
