--- a/src/Designer/backend/src/Designer/appsettings.Production.json
+++ b/src/Designer/backend/src/Designer/appsettings.Production.json
@@ -7,5 +7,11 @@
             "ExhangeToAltinnToken": false,
             "Environment": "prod"
         }
+    },
+    "AnsattPortenLoginSettings": {
+        "Authority": "https://ansattporten.no"
+    },
+    "MaskinPortenHttpClientSettings": {
+        "BaseUrl": "https://api.samarbeid.digdir.no"
     }
 }
