copy backend changes from feature-branch

--- a/src/Designer/backend/src/Designer/appsettings.Production.json
+++ b/src/Designer/backend/src/Designer/appsettings.Production.json
@@ -7,5 +7,9 @@
             "ExhangeToAltinnToken": false,
             "Environment": "prod"
         }
+    },
+    "AltinitySettings": {
+        "AgentUrl": "https://altinity-agent.production.url",
+        "TimeoutSeconds": 600
     }
 }
