--- a/src/Designer/backend/src/Designer/appsettings.Staging.json
+++ b/src/Designer/backend/src/Designer/appsettings.Staging.json
@@ -7,5 +7,9 @@
             "ExhangeToAltinnToken": false,
             "Environment": "test"
         }
+    },
+    "AltinitySettings": {
+        "AgentUrl": "https://altinity-agent.staging.url",
+        "TimeoutSeconds": 600
     }
 }
