--- a/src/App/template/src/App/config/applicationmetadata.json
+++ b/src/App/template/src/App/config/applicationmetadata.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://altinncdn.no/toolkits/altinn-app-frontend/4/schemas/json/application/application-metadata.schema.v1.json",
-  "id": "tdd/bestilling",
-  "org": "tdd",
-  "title": { "nb": "Bestillingseksempelapp" },
+  "id": "[ORG]/[APP]",
+  "org": "[ORG]",
+  "title": { "nb": "[APP]" },
   "dataTypes": [
     {
       "id": "ref-data-as-pdf",
