--- a/.github/workflows/runtime-operator-build.yml
+++ b/.github/workflows/runtime-operator-build.yml
@@ -7,6 +7,7 @@ on:
       - 'src/Runtime/operator/**'
       - 'src/Runtime/test/fixture/**'
       - '.github/workflows/runtime-operator-build.yml'
+      - 'src/App/azure-pipelines/deploy-app.yaml'
   workflow_dispatch:
 
 jobs:
