--- a/src/Runtime/StudioGateway/compose.yaml
+++ b/src/Runtime/StudioGateway/compose.yaml
@@ -1,7 +1,7 @@
 services:
   studio-gateway:
     build:
-      context: .
+      context: ../
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
