CSharpier and editorconfig for `common` lib

--- a/src/Runtime/common/Altinn.Studio.Runtime.Common.csproj
+++ b/src/Runtime/common/Altinn.Studio.Runtime.Common.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include=".config\dotnet-tools.json" />
+  </ItemGroup>
 </Project>
