--- a/src/Runtime/StudioGateway/compose.yaml
+++ b/src/Runtime/StudioGateway/compose.yaml
@@ -2,7 +2,7 @@ services:
   studio-gateway:
     build:
       context: ../
-      dockerfile: Dockerfile
+      dockerfile: StudioGateway/Dockerfile
     ports:
       - "8080:8080"
     restart: unless-stopped
