--- a/src/Runtime/workflow-engine/Dockerfile
+++ b/src/Runtime/workflow-engine/Dockerfile
@@ -6,9 +6,13 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /code
-COPY ./ ./
-WORKDIR /code/src/WorkflowEngine.Api
+WORKDIR /build
+
+COPY common/ common/
+COPY workflow-engine/ app/
+
+
+WORKDIR /build/app/src/WorkflowEngine.Api
 RUN dotnet restore "WorkflowEngine.Api.csproj"
 RUN dotnet build "WorkflowEngine.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
