--- a/charts/altinn-loadbalancer/templates/deployment.yaml
+++ b/charts/altinn-loadbalancer/templates/deployment.yaml
@@ -22,6 +22,14 @@ spec:
             - containerPort: {{ .Values.image.containerPorts.http }}
             - containerPort: {{ .Values.image.containerPorts.https }}
             - containerPort: {{ .Values.image.containerPorts.lhci }}
+          env:
+            - name: POD_UID
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.uid
+            - name: OTEL_RESOURCE_ATTRIBUTES
+              value: "k8s.pod.uid=$(POD_UID)"
           {{- if .Values.volumeMounts }}
           volumeMounts:
           {{- range $mount := .Values.volumeMounts }}
