--- a/src/Runtime/operator/config/manager/manager.yaml
+++ b/src/Runtime/operator/config/manager/manager.yaml
@@ -36,6 +36,13 @@ spec:
         image: controller:latest
         name: manager
         env:
+          - name: POD_UID
+            valueFrom:
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.uid
+          - name: OTEL_RESOURCE_ATTRIBUTES
+            value: "k8s.pod.uid=$(POD_UID)"
           - name: OPERATOR_UPGRADE_CHANNEL
             valueFrom:
               configMapKeyRef:
