--- a/src/Runtime/pdf3/infra/kustomize/base/proxy.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/proxy.yaml
@@ -186,6 +186,13 @@ spec:
               containerPort: 5030
               protocol: TCP
           env:
+          - name: POD_UID
+            valueFrom:
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.uid
+          - name: OTEL_RESOURCE_ATTRIBUTES
+            value: "k8s.pod.uid=$(POD_UID)"
           - name: PDF3_WORKER_HTTP_ADDR
             value: http://pdf3-worker:80
           - name: PDF3_UPGRADE_CHANNEL
