--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Docker.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Docker.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WorkflowEngine": "Host=postgres;Database=workflow_engine;Username=postgres;Password=postgres123"
+  },
   "EngineSettings": {},
   "ApiSettings": {},
   "AppCommandSettings": {}
