--- a/infra/runtime/syncroot/base/observability.yaml
+++ b/infra/runtime/syncroot/base/observability.yaml
@@ -36,3 +36,6 @@ spec:
     kind: OCIRepository
     name: observability-repo
     namespace: runtime-obs
+  postBuild:
+    substitute:
+      ENVIRONMENT: ${ENVIRONMENT}
