--- a/infra/observability/base/router.yaml
+++ b/infra/observability/base/router.yaml
@@ -6,6 +6,7 @@ spec:
   mode: deployment
   image: otel/opentelemetry-collector-contrib:0.143.0
   serviceAccount: otel-collector
+  upgradeStrategy: automatic
   replicas: 1
   resources:
     requests:
@@ -29,3 +30,54 @@ spec:
             endpoint: 0.0.0.0:4317
           http:
             endpoint: 0.0.0.0:4318
+    processors:
+      # Processor definitions sourced from https://github.com/dis-way/gitops-manifests/blob/1b96cf749be6e5cedfbfc09eb6caf3bd72bfb4c0/oci/otel-collector/base/collector.yaml to keep parity with existing collector behavior.
+      resourcedetection/aks:
+        detectors: [aks]
+        timeout: 2s
+        override: false
+        aks:
+          resource_attributes:
+            k8s.cluster.name:
+              enabled: true
+      k8sattributes:
+        auth_type: 'serviceAccount'
+        wait_for_metadata: true
+        wait_for_metadata_timeout: 10s
+        extract:
+          metadata:
+            - k8s.namespace.name
+            - k8s.pod.name
+            - k8s.pod.start_time
+            - k8s.pod.uid
+            - k8s.deployment.name
+            - k8s.job.name
+            - k8s.cronjob.name
+            - k8s.daemonset.name
+            - k8s.node.name
+            - service.name
+            - service.version
+          labels:
+            - tag_name: app.label.name
+              key: app.kubernetes.io/name
+              from: pod
+        pod_association:
+          - sources:
+              - from: resource_attribute
+                name: k8s.pod.uid
+          - sources:
+              - from: resource_attribute
+                name: k8s.pod.ip
+          - sources:
+              - from: connection
+      resource/environment:
+        attributes:
+          - key: deployment.environment.name
+            value: ${ENVIRONMENT}
+            action: upsert
+      filter/logs:
+        error_mode: ignore
+        logs:
+          log_record:
+            - 'severity_number < SEVERITY_NUMBER_WARN'
+      batch: {}
