--- a/src/Designer/backend/src/Designer/appsettings.Production.json
+++ b/src/Designer/backend/src/Designer/appsettings.Production.json
@@ -8,6 +8,10 @@
             "Environment": "prod"
         }
     },
+    "AltinitySettings": {
+        "AgentUrl": "https://altinity-agent.production.url",
+        "TimeoutSeconds": 600
+    },
     "AnsattPortenLoginSettings": {
         "Authority": "https://ansattporten.no"
     },
